--- a/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/src/main/webapp/WEB-INF/topbar.xhtml
@@ -3,18 +3,30 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
+    xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:p="http://primefaces.org/ui">
 
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#logout').removeClass('ui-commandlink')
+                    .on('click', function () {
+                        setTimeout(function () {
+                            window.location = "/sgtapp/";
+                        }, 500);
+                    });
+            $('#english').removeClass('ui-commandlink');
+            $('#spanish').removeClass('ui-commandlink');
+        });
+    </script>
     <div id="layout-topbar" class="ShadowGray">
         <div id="layout-topbar-indent">
-            <a href="dashboard.xhtml"><h:graphicImage name="eg-tech-logo-1s.jpg" styleClass="Fleft" library="images" id="logo" class="Fleft"/></a>
+            <a href="/welcome.xhtml"><h:graphicImage name="eg-tech-logo-1s.jpg" styleClass="Fleft" library="images" id="logo" class="Fleft"/></a>
             <a href="#" id="mobile-menu-button" class="BordRad3 white ShowOnMobile"><i class="fa fa-bars"></i> Menu</a>
             <a href="#" id="mobile-menu-button-gray" class="BordRad3 white ShowOnMobile"><i class="fa fa-caret-down"></i> Top Menu</a>
 
             <ul id="layout-topbar-menu">
                 <li>
-                    <a href="#" class="Animated05"><i class="fa fa-sign-out"></i> Logout</a>
+                    <p:commandLink id="logout" actionListener="#{loginMB.closeSession()}" styleClass="Unselectable BoxbarLink"><i class="fa fa-sign-out"></i> Logout</p:commandLink>
                 </li>
                 <li class="fa fa-ellipsis-v menu-separator"></li>
                 <li>
@@ -24,10 +36,8 @@
                 <li>
                     <a class="Animated05 CursPointer"><i class="fa fa-flag-checkered"></i> Language <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
                     <ul style="width:150px; margin-left:-30px;" class="Animated03 submenu">
-                        <li><a href="#" class="Animated05"><i class="fa fa-flag red"></i> English</a></li>
-                        <li><a href="#" class="Animated05"><i class="fa fa-flag red"></i> German</a></li>
-                        <li><a href="#" class="Animated05"><i class="fa fa-flag red"></i> Portuguese</a></li>
-                        <li><a href="#" class="Animated05"><i class="fa fa-flag red"></i> French</a></li>
+                        <li><p:commandLink id="english" action="#{languageMB.changeLanguage('')}" process="@all" styleClass="Unselectable BoxbarLink"><i class="fa fa-flag red"></i> English</p:commandLink></li>
+                        <li><p:commandLink id="spanish" action="#{languageMB.changeLanguage('es')}" process="@all" styleClass="Unselectable BoxbarLink"><i class="fa fa-flag blue"></i> Spanish</p:commandLink></li>
                     </ul>
                 </li>
                 <li class="fa fa-ellipsis-v menu-separator"></li>
@@ -43,7 +53,7 @@
                 </li>
                 <li class="fa fa-ellipsis-v menu-separator"></li>
                 <li>
-                    <a class="Animated05 CursPointer"><i class="fa fa-user"></i> John DOE, Welcome <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
+                    <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{loginMB.personSession.fullname}, Welcome <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
                     <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
                         <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">John DOE<span class="Fs10 DispBlock">Last login 18:50</span></span></a></li>
                         <li><a href="#" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
