--- a/src/main/webapp/commons/login.xhtml
+++ b/src/main/webapp/commons/login.xhtml
@@ -12,7 +12,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>LOG IN</title>
+        <title>EG Technologies - Log In</title>
         <h:outputScript name="js/layout.js" library="spark-layout" />
 
         <h:outputText value="&lt;!--[if gte IE 9]&gt;" escape="false" />
@@ -31,7 +31,7 @@
                 <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
                      style="margin-top:5%; background-image:url(resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
                     <div class="Container90 Fnone MarAuto TexAlCenter">
-                        <div class="EmptyBox20"></div>
+                        <div class="EmptyBox10"></div>
                         <h:graphicImage name="eg-tech-logo-2s.jpg" library="images" styleClass="Wid50 MarAuto MarTop20 MarBot10"/>
                         <div class="EmptyBox20"></div>
                         <p:inputText placeholder="Username" value="#{loginMB.username}" styleClass="Container80 Fnone MarAuto Fs18"/>
