--- a/src/main/webapp/pages/changePassword.xhtml
+++ b/src/main/webapp/pages/changePassword.xhtml
@@ -1,23 +1,14 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3c.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>SGTWEB - Change Password</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <h:outputStylesheet library="css" name="mycss.css" />
-    </h:head>
-    <h:body>
-        <f:view>
-            <p:layout fullPage="true">
-                <p:layoutUnit position="south" size="50" closable="true" collapsible="true">
-                    <ui:include src="../commons/footer.xhtml" />
-                </p:layoutUnit>
-                
-                <p:layoutUnit position="center" style="font-size: 12px;">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/WEB-INF/template.xhtml">
+
+    <ui:define name="content">
+        <div class="layout-portlets-box">
+            <div class="Container100">
+                <div class="ContainerIndent">
                     <h:panelGrid columns="2" width="100%" cellpadding="0" style="vertical-align: middle" styleClass="ui-widget ui-widget-header ui-corner-all">
                         <p:graphicImage library="images" name="eg-tech-logo-1.jpg" style="border: 0; max-height: 36px; max-width: 210px;"/>
                         <p:spacer height="15"/>
@@ -26,31 +17,31 @@
                         <p:spacer height="150"/>
                         <h:form id="login">
                             <center>
-                                <p:panel id="pnl" header="CHANGE PASSWORD" style="font-size: 13px;width: 350px;text-align: left;" >
+                                <p:panel id="pnl" header="CHANGE PASSWORD" style="width: 350px;" styleClass="Fs13" >
                                     <p:messages id="dlgMsgs" showDetail="true" autoUpdate="true" closable="true" />
                                     <h:panelGrid columns="2" width="100%">
                                         <h:panelGrid columns="2">
-                                            <h:outputText value="Current Password: " styleClass="Etiqueta1"/>
-                                            <p:password value="#{passwordMB.currentPassword}" maxlength="8" style="float: left;font-size: 11px" />
+                                            <h:outputText value="Current Password: " styleClass="FontBold Fs13"/>
+                                            <p:password value="#{passwordMB.currentPassword}" maxlength="8" styleClass="Fs12" />
 
-                                            <h:outputText value="New Password: " styleClass="Etiqueta1"/>
-                                            <p:password value="#{passwordMB.newPassword}" maxlength="8" style="float: left;font-size: 11px" />
+                                            <h:outputText value="New Password: " styleClass="FontBold Fs13"/>
+                                            <p:password value="#{passwordMB.newPassword}" maxlength="8" styleClass="Fs12" />
 
-                                            <h:outputText value="Confirm New Password: " styleClass="Etiqueta1"/>
-                                            <p:password value="#{passwordMB.confirmNewPassword}" maxlength="8" style="float: left;font-size: 11px" />
+                                            <h:outputText value="Confirm New Password: " styleClass="FontBold Fs13"/>
+                                            <p:password value="#{passwordMB.confirmNewPassword}" maxlength="8" styleClass="Fs12" />
                                         </h:panelGrid>
                                         <p:graphicImage library="images" name="keychain.png" style="border: 0;"/>
                                     </h:panelGrid>
                                     <h:panelGrid columns="1" width="100%" style="text-align: center;">
-                                        <p:commandButton value="Change Password" action="#{passwordMB.changePassword}" style="font-size: 11px;height: 2em"/>
+                                        <p:commandButton value="Change Password" action="#{passwordMB.changePassword}"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </center>
                         </h:form>
                     </h:panelGrid>
-                </p:layoutUnit>
-            </p:layout>
-        </f:view>
-    </h:body>
-</html>
+                </div>
+            </div>
+        </div>
+    </ui:define>
+</ui:composition>
 
