New modules... hardware, assign hardware, install software. Update styles.

--- a/src/main/webapp/WEB-INF/template.xhtml
+++ b/src/main/webapp/WEB-INF/template.xhtml
@@ -44,6 +44,7 @@
         <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
         <h:outputStylesheet name="css/animate.css" library="spark-layout" />
         <h:outputStylesheet name="css/spark-layout-blue.css" library="spark-layout" />
+        <h:outputStylesheet name="primefaces-override.css" library="css" />
     </h:body>
 
 </html>
