--- a/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/src/main/webapp/WEB-INF/topbar.xhtml
@@ -16,6 +16,11 @@
                     });
             $('#english').removeClass('ui-commandlink');
             $('#spanish').removeClass('ui-commandlink');
+            $(this).find("a[id*='elink']").removeClass('ui-commandlink');
+            $(this).find("a[id*='dlink']").removeClass('ui-commandlink');
+            $(this).find("a[id*='alink']").removeClass('ui-commandlink');
+            $(this).find("a[id*='ilink']").removeClass('ui-commandlink');
+            $(this).find("a[id*='rlink']").removeClass('ui-commandlink');
         });
     </script>
     <div id="layout-topbar" class="ShadowGray">
