--- a/src/main/webapp/pages/changePassword.xhtml
+++ b/src/main/webapp/pages/changePassword.xhtml
@@ -3,21 +3,17 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/WEB-INF/template.xhtml">
+                template="/WEB-INF/templateClean.xhtml">
 
     <ui:define name="content">
         <div class="layout-portlets-box">
             <div class="Container100">
                 <div class="ContainerIndent">
-                    <h:panelGrid columns="2" width="100%" cellpadding="0" style="vertical-align: middle" styleClass="ui-widget ui-widget-header ui-corner-all">
-                        <p:graphicImage library="images" name="eg-tech-logo-1.jpg" style="border: 0; max-height: 36px; max-width: 210px;"/>
-                        <p:spacer height="15"/>
-                    </h:panelGrid>
                     <h:panelGrid columns="1" width="100%" cellpadding="0" cellspacing="0" >
-                        <p:spacer height="150"/>
+                        <p:spacer height="100"/>
                         <h:form id="login">
                             <center>
-                                <p:panel id="pnl" header="CHANGE PASSWORD" style="width: 350px;" styleClass="Fs13" >
+                                <p:panel id="pnl" header="CHANGE PASSWORD" style="width: 400px;" styleClass="Fs13" >
                                     <p:messages id="dlgMsgs" showDetail="true" autoUpdate="true" closable="true" />
                                     <h:panelGrid columns="2" width="100%">
                                         <h:panelGrid columns="2">
@@ -38,6 +34,7 @@
                                 </p:panel>
                             </center>
                         </h:form>
+                        <p:spacer height="100"/>
                     </h:panelGrid>
                 </div>
             </div>
